--- a/elmslie-android/build.gradle
+++ b/elmslie-android/build.gradle
@@ -3,14 +3,10 @@ plugins {
     id("kotlin-android")
 }
 
-tasks.withType(Test) { // FIXME: Unify platform integration
-    useJUnitPlatform()
-}
-
 android {
     compileSdkVersion 30
 
-    defaultConfig.minSdkVersion 15 // FIXME Decide
+    defaultConfig.minSdkVersion 15
     defaultConfig.targetSdkVersion 30
 
     compileOptions.sourceCompatibility = JavaVersion.VERSION_1_8
@@ -21,4 +17,5 @@ dependencies {
     implementation("io.reactivex.rxjava2:rxjava:2.2.20")
 }
 
+apply from: "../gradle/junit-5.gradle"
 apply from: "../gradle/android-publishing.gradle"
