--- a/elmslie-android/build.gradle
+++ b/elmslie-android/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 
     implementation("io.reactivex.rxjava2:rxjava:2.2.20")
     implementation("io.reactivex.rxjava2:rxandroid:2.1.1")
+    implementation("com.jakewharton.timber:timber:4.7.1")
 }
 
 apply from: "../gradle/junit-5.gradle"
