--- a/elmslie-test/build.gradle
+++ b/elmslie-test/build.gradle
@@ -3,13 +3,10 @@ plugins {
 }
 
 dependencies {
+    implementation("org.junit.jupiter:junit-jupiter:5.7.0")
     implementation("io.reactivex.rxjava2:rxjava:2.2.20")
-    testImplementation(project(":elmslie-test"))
 }
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
-
-apply from: "../gradle/junit-5.gradle"
-apply from: "../gradle/kotlin-publishing.gradle"
