--- a/elmslie-android/build.gradle
+++ b/elmslie-android/build.gradle
@@ -3,16 +3,6 @@ plugins {
     id("kotlin-android")
 }
 
-android {
-    compileSdkVersion 30
-
-    defaultConfig.minSdkVersion 15
-    defaultConfig.targetSdkVersion 30
-
-    compileOptions.sourceCompatibility = JavaVersion.VERSION_1_8
-    compileOptions.targetCompatibility = JavaVersion.VERSION_1_8
-}
-
 dependencies {
     implementation(project(":elmslie-core"))
 
@@ -24,4 +14,5 @@ dependencies {
 }
 
 apply from: "../gradle/junit-5.gradle"
+apply from: "../gradle/android-library.gradle"
 apply from: "../gradle/android-publishing.gradle"
