--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,7 @@ include ':elmslie-android'
 include ':elmslie-test'
 include ':sample-kotlin-calculator'
 project(":sample-kotlin-calculator").projectDir = file("elmslie-samples/kotlin-calculator")
+include ':sample-android-loader'
+project(":sample-android-loader").projectDir = file("elmslie-samples/android-loader")
 
 rootProject.name = "Elmslie"
