--- a/elmslie-samples/android-loader/src/main/AndroidManifest.xml
+++ b/elmslie-samples/android-loader/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
         package="vivid.money.elmslie.samples.android.loader">
 
     <application
+            android:name=".App"
             android:allowBackup="false"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
