--- a/gradle/junit-5.gradle
+++ b/gradle/junit-5.gradle
@@ -3,5 +3,5 @@ tasks.withType(Test) {
 }
 
 dependencies {
-    testImplementation("org.junit.jupiter:junit-jupiter:5.7.0")
+    testImplementation(deps.test.jUnit5)
 }
