--- a/elmslie-android/build.gradle
+++ b/elmslie-android/build.gradle
@@ -6,11 +6,11 @@ plugins {
 dependencies {
     implementation(project(":elmslie-core"))
 
-    implementation("androidx.appcompat:appcompat:1.1.0")
+    implementation(deps.android.appcompat)
+    implementation(deps.android.timber)
 
-    implementation("io.reactivex.rxjava2:rxjava:2.2.20")
-    implementation("io.reactivex.rxjava2:rxandroid:2.1.1")
-    implementation("com.jakewharton.timber:timber:4.7.1")
+    implementation(deps.rx.rxAndroid)
+    implementation(deps.rx.rxJava2)
 }
 
 apply from: "../gradle/junit-5.gradle"
