--- a/elmslie-samples/kotlin-calculator/build.gradle
+++ b/elmslie-samples/kotlin-calculator/build.gradle
@@ -3,8 +3,9 @@ plugins {
 }
 
 dependencies {
-    implementation("io.reactivex.rxjava2:rxjava:2.2.20")
     implementation(project(":elmslie-core"))
+    implementation(deps.rx.rxJava2)
+
     testImplementation(project(":elmslie-test"))
 }
 
