--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,7 @@ include ':sample-kotlin-calculator'
 project(":sample-kotlin-calculator").projectDir = file("elmslie-samples/kotlin-calculator")
 include ':sample-android-loader'
 project(":sample-android-loader").projectDir = file("elmslie-samples/android-loader")
+include ':elmslie-plugin'
+project(":elmslie-plugin").projectDir = file("elmslie-plugin")
 
 rootProject.name = "Elmslie"
