--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,14 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath deps.gradle.androidPlugin
         classpath deps.gradle.kotlinPlugin
+        classpath deps.gradle.intellijPlugin
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
