--- a/elmslie-core/build.gradle
+++ b/elmslie-core/build.gradle
@@ -4,6 +4,10 @@ plugins {
 
 dependencies {
     implementation(deps.rx.rxJava2)
+
+    testRuntimeOnly(deps.test.kotestJunitRunner)
+    testImplementation(deps.test.kotestAssertions)
+    testImplementation(deps.test.kotestProperty)
     testImplementation(project(":elmslie-test"))
 }
 
