--- a/gradle/kotlin-publishing.gradle
+++ b/gradle/kotlin-publishing.gradle
@@ -1,12 +1,11 @@
 apply plugin: "maven-publish"
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
+java {
+    withSourcesJar()
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier.set("javadoc")
     from javadoc.destinationDir
 }
 
