--- a/elmslie-samples/android-loader/build.gradle
+++ b/elmslie-samples/android-loader/build.gradle
@@ -6,6 +6,7 @@ plugins {
 dependencies {
     implementation(project(":elmslie-android"))
     implementation(project(":elmslie-core"))
+    implementation(project(":elmslie-rxjava-2"))
 
     implementation(deps.android.appcompat)
     implementation(deps.rx.rxJava2)
