--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -2,6 +2,8 @@ ext.versions = [
         kotlin       : "1.4.21",
         androidPlugin: "4.1.2",
         appcompat    : "1.1.0",
+        rxJava2      : "2.2.20",
+        rxJava3Bridge: "3.0.0",
         rxJava3      : "3.0.10",
         rxAndroid    : "3.0.0",
         jUnit5       : "5.7.0",
@@ -17,8 +19,10 @@ ext.deps = [
                 appcompat: "androidx.appcompat:appcompat:$versions.appcompat",
         ],
         rx     : [
-                rxJava2  : "io.reactivex.rxjava3:rxjava:$versions.rxJava3",
-                rxAndroid: "io.reactivex.rxjava3:rxandroid:$versions.rxAndroid",
+                rxJava2      : "io.reactivex.rxjava2:rxjava:$versions.rxJava2",
+                rxJava3      : "io.reactivex.rxjava3:rxjava:$versions.rxJava3",
+                rxJava3Bridge: "com.github.akarnokd:rxjava3-bridge:$versions.rxJava3Bridge",
+                rxAndroid    : "io.reactivex.rxjava3:rxandroid:$versions.rxAndroid",
         ],
         test   : [
                 jUnit5           : "org.junit.jupiter:junit-jupiter:$versions.jUnit5",
