--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -2,6 +2,7 @@ ext.versions = [
         kotlin       : "1.4.21",
         androidPlugin: "4.1.2",
         appcompat    : "1.1.0",
+        material     : "1.1.0",
         rxJava2      : "2.2.20",
         rxJava3Bridge: "3.0.0",
         rxJava3      : "3.0.10",
@@ -17,6 +18,7 @@ ext.deps = [
         ],
         android: [
                 appcompat: "androidx.appcompat:appcompat:$versions.appcompat",
+                material : "com.google.android.material:material:$versions.material"
         ],
         rx     : [
                 rxJava2      : "io.reactivex.rxjava2:rxjava:$versions.rxJava2",
