--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url = uri("https://jitpack.io")
+            content { includeGroup("com.github.vivid-money.elmslie") }
+        }
     }
     dependencies {
         classpath deps.gradle.androidPlugin
@@ -18,6 +22,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url = uri("https://jitpack.io")
+            content { includeGroup("com.github.vivid-money.elmslie") }
+        }
     }
 }
 
