--- a/elmslie-rxjava-2/build.gradle
+++ b/elmslie-rxjava-2/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.freeCompilerArgs = ['-Xjvm-default=enable']
 }
 
 apply from: "../gradle/junit-5.gradle"
