Improve build speed

--- a/elmslie-samples/android-loader/build.gradle
+++ b/elmslie-samples/android-loader/build.gradle
@@ -3,6 +3,12 @@ plugins {
     id("kotlin-android")
 }
 
+android {
+    buildFeatures {
+        buildConfig = true
+    }
+}
+
 dependencies {
     implementation(project(":elmslie-android"))
     implementation(project(":elmslie-core"))
