--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,48 @@
-# Project-wide Gradle settings.
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
+# ----- Gradle Options -----
+#
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
+# https://docs.gradle.org/current/userguide/multi_project_builds.html#sec:parallel_execution
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
-# AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app"s APK
+org.gradle.parallel=true
+# https://docs.gradle.org/current/userguide/multi_project_builds.html#sec:configuration_on_demand
+org.gradle.configureondemand=true
+# https://docs.gradle.org/current/userguide/gradle_daemon.html
+org.gradle.daemon=true
+# https://docs.gradle.org/current/userguide/build_cache.html
+org.gradle.caching=true
+# https://docs.gradle.org/current/userguide/gradle_daemon.html#sec:daemon_watch_fs
+org.gradle.vfs.watch=true
+#
+# ----- AndroidX -----
+#
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
-# Automatically convert third-party libraries to use AndroidX
-android.enableJetifier=true
+#
+# ----- Kotlin & Kapt -----
+#
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-
+# https://kotlinlang.org/docs/reference/kapt.html#incremental-annotation-processing-since-1330
+kapt.incremental.apt=true
+# https://kotlinlang.org/docs/reference/kapt.html?_ga=2.52861352.147014511.1570608228-996117368.1567680991#compile-avoidance-for-kapt-since-1320
+kapt.include.compile.classpath=false
+#
+# ----- AGP 4.0 build features -----
+#
+# disable build config generation
+android.defaults.buildfeatures.buildconfig=false
+# disable compileAidl tasks
+android.defaults.buildfeatures.aidl=false
+# disable (package/compile)Rendescript tasks
+android.defaults.buildfeatures.renderscript=false
+# disable providing custom values to resources from buildscript
+android.defaults.buildfeatures.resvalues=false
+# disable compileShaders tasks
+android.defaults.buildfeatures.shaders=false
+#
+# ----- Config -----
+#
 libraryVersion=1.0.11
 libraryGroup=vivid.money.elmslie
