--- a/elmslie-android/build.gradle
+++ b/elmslie-android/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     implementation(project(":elmslie-core"))
 
     implementation(deps.android.appcompat)
+    implementation(deps.android.appStartup)
 
     implementation(deps.rx.rxAndroid)
     implementation(deps.rx.rxJava3)
