--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -3,6 +3,7 @@ ext.versions = [
         androidPlugin: "4.1.2",
         appcompat    : "1.2.0",
         material     : "1.3.0",
+        appStartup   : "1.0.0",
         rxJava2      : "2.2.21",
         rxJava3Bridge: "3.0.0",
         rxJava3      : "3.0.11",
@@ -15,13 +16,14 @@ ext.versions = [
 
 ext.deps = [
         gradle : [
-                androidPlugin: "com.android.tools.build:gradle:$versions.androidPlugin",
-                kotlinPlugin : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin",
-                intellijPlugin : "org.jetbrains.intellij.plugins:gradle-intellij-plugin:$versions.intellij"
+                androidPlugin : "com.android.tools.build:gradle:$versions.androidPlugin",
+                kotlinPlugin  : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin",
+                intellijPlugin: "org.jetbrains.intellij.plugins:gradle-intellij-plugin:$versions.intellij",
         ],
         android: [
-                appcompat: "androidx.appcompat:appcompat:$versions.appcompat",
-                material : "com.google.android.material:material:$versions.material"
+                appcompat : "androidx.appcompat:appcompat:$versions.appcompat",
+                material  : "com.google.android.material:material:$versions.material",
+                appStartup: "androidx.startup:startup-runtime:$versions.appStartup",
         ],
         rx     : [
                 rxJava2      : "io.reactivex.rxjava2:rxjava:$versions.rxJava2",
@@ -33,9 +35,9 @@ ext.deps = [
                 jUnit5           : "org.junit.jupiter:junit-jupiter:$versions.jUnit5",
                 kotestJunitRunner: "io.kotest:kotest-runner-junit5-jvm:$versions.kotest",
                 kotestAssertions : "io.kotest:kotest-assertions-core:$versions.kotest",
-                kotestProperty   : "io.kotest:kotest-property:$versions.kotest"
+                kotestProperty   : "io.kotest:kotest-property:$versions.kotest",
         ],
         plugin : [
-                freemarker: "org.freemarker:freemarker:$versions.freemarker"
+                freemarker: "org.freemarker:freemarker:$versions.freemarker",
         ]
 ]
