--- a/gradle/android-library.gradle
+++ b/gradle/android-library.gradle
@@ -6,4 +6,14 @@ android {
 
     compileOptions.sourceCompatibility = JavaVersion.VERSION_1_8
     compileOptions.targetCompatibility = JavaVersion.VERSION_1_8
+
+    lintOptions {
+        checkReleaseBuilds false
+        checkDependencies true
+        ignoreTestSources true
+        abortOnError true
+        warningsAsErrors true
+        htmlReport true
+        xmlReport false
+    }
 }
