--- a/elmslie-samples/android-loader/build.gradle
+++ b/elmslie-samples/android-loader/build.gradle
@@ -21,3 +21,4 @@ dependencies {
 
 apply from: "../../gradle/junit-5.gradle"
 apply from: "../../gradle/android-library.gradle"
+apply from: "../../gradle/detekt.gradle"
