--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,5 +1,6 @@
 ext.versions = [
         kotlin       : "1.4.31",
+        detekt       : "1.16.0",
         androidPlugin: "4.1.2",
         appcompat    : "1.2.0",
         material     : "1.3.0",
@@ -19,6 +20,7 @@ ext.deps = [
                 androidPlugin : "com.android.tools.build:gradle:$versions.androidPlugin",
                 kotlinPlugin  : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin",
                 intellijPlugin: "org.jetbrains.intellij.plugins:gradle-intellij-plugin:$versions.intellij",
+                detektPlugin  : "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:$versions.detekt"
         ],
         android: [
                 appcompat : "androidx.appcompat:appcompat:$versions.appcompat",
