--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,18 +1,19 @@
 ext.versions = [
-        kotlin       : "1.5.0",
-        detekt       : "1.16.0",
-        androidPlugin: "4.2.0",
-        appcompat    : "1.2.0",
-        material     : "1.3.0",
-        appStartup   : "1.0.0",
-        rxJava2      : "2.2.21",
-        rxJava3Bridge: "3.0.0",
-        rxJava3      : "3.0.11",
-        rxAndroid    : "3.0.0",
-        jUnit5       : "5.7.1",
-        kotest       : "4.4.3",
-        freemarker   : "2.3.31",
-        intellij     : "0.6.5",
+        kotlin          : "1.5.0",
+        detekt          : "1.16.0",
+        androidPlugin   : "4.2.0",
+        appcompat       : "1.2.0",
+        material        : "1.3.0",
+        lifecycleVersion: "2.3.1",
+        appStartup      : "1.0.0",
+        rxJava2         : "2.2.21",
+        rxJava3Bridge   : "3.0.0",
+        rxJava3         : "3.0.11",
+        rxAndroid       : "3.0.0",
+        jUnit5          : "5.7.1",
+        kotest          : "4.4.3",
+        freemarker      : "2.3.31",
+        intellij        : "0.6.5",
 ]
 
 ext.deps = [
@@ -23,9 +24,11 @@ ext.deps = [
                 detektPlugin  : "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:$versions.detekt"
         ],
         android: [
-                appcompat : "androidx.appcompat:appcompat:$versions.appcompat",
-                material  : "com.google.android.material:material:$versions.material",
-                appStartup: "androidx.startup:startup-runtime:$versions.appStartup",
+                appcompat                   : "androidx.appcompat:appcompat:$versions.appcompat",
+                lifecycleViewmodel          : "androidx.lifecycle:lifecycle-viewmodel:$versions.lifecycleVersion",
+                lifecycleViewModelSavedState: "androidx.lifecycle:lifecycle-viewmodel-savedstate:$versions.lifecycleVersion",
+                material                    : "com.google.android.material:material:$versions.material",
+                appStartup                  : "androidx.startup:startup-runtime:$versions.appStartup",
         ],
         rx     : [
                 rxJava2      : "io.reactivex.rxjava2:rxjava:$versions.rxJava2",
