--- a/gradle/android-library.gradle
+++ b/gradle/android-library.gradle
@@ -1,5 +1,6 @@
 android {
     compileSdkVersion 30
+    buildToolsVersion("30.0.3")
 
     defaultConfig.minSdkVersion 16
     defaultConfig.targetSdkVersion 30
