--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,8 @@ include ':sample-java-notes'
 project(":sample-java-notes").projectDir = file("elmslie-samples/java-notes")
 include ':sample-android-loader'
 project(":sample-android-loader").projectDir = file("elmslie-samples/android-loader")
+include ':sample-compose-paging'
+project(":sample-compose-paging").projectDir = file("elmslie-samples/compose-paging")
 include ':elmslie-plugin'
 project(":elmslie-plugin").projectDir = file("elmslie-plugin")
 include ':elmslie-store-persisting'
