--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,19 +1,22 @@
 ext.versions = [
-        kotlin          : "1.5.10",
-        detekt          : "1.17.1",
-        androidPlugin   : "4.2.1",
-        appcompat       : "1.2.0",
-        material        : "1.3.0",
-        lifecycleVersion: "2.3.1",
-        appStartup      : "1.0.0",
-        rxJava2         : "2.2.21",
-        rxJava3Bridge   : "3.0.0",
-        rxJava3         : "3.0.13",
-        rxAndroid       : "3.0.0",
-        jUnit5          : "5.7.2",
-        kotest          : "4.6.0",
-        freemarker      : "2.3.31",
-        intellij        : "0.6.5",
+        kotlin             : "1.5.10",
+        detekt             : "1.17.1",
+        androidPlugin      : "4.2.1",
+        appcompat          : "1.3.0",
+        material           : "1.3.0",
+        buildTools         : "30.0.3",
+        lifecycleVersion   : "2.3.1",
+        appStartup         : "1.0.0",
+        rxJava2            : "2.2.21",
+        rxJava3Bridge      : "3.0.0",
+        rxJava3            : "3.0.13",
+        rxAndroid          : "3.0.0",
+        jUnit5             : "5.7.2",
+        kotest             : "4.6.0",
+        freemarker         : "2.3.31",
+        intellij           : "0.6.5",
+        compose            : "1.0.0-beta09",
+        composeSwipeRefresh: "0.10.0",
 ]
 
 ext.deps = [
