Add Releases Hub Gradle plugin

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         classpath deps.gradle.kotlinPlugin
         classpath deps.gradle.intellijPlugin
         classpath deps.gradle.detektPlugin
+        classpath deps.gradle.releasesHub
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -29,3 +30,5 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+apply from: 'gradle/release-hub.gradle'
