--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,48 +1,31 @@
-ext.versions = [
-        kotlin          : "1.5.10",
-        detekt          : "1.17.1",
-        androidPlugin   : "4.2.1",
-        appcompat       : "1.2.0",
-        material        : "1.3.0",
-        lifecycleVersion: "2.3.1",
-        appStartup      : "1.0.0",
-        rxJava2         : "2.2.21",
-        rxJava3Bridge   : "3.0.0",
-        rxJava3         : "3.0.13",
-        rxAndroid       : "3.0.0",
-        jUnit5          : "5.7.2",
-        kotest          : "4.6.0",
-        freemarker      : "2.3.31",
-        intellij        : "0.6.5",
-]
-
 ext.deps = [
         gradle : [
-                androidPlugin : "com.android.tools.build:gradle:$versions.androidPlugin",
-                kotlinPlugin  : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin",
-                intellijPlugin: "org.jetbrains.intellij.plugins:gradle-intellij-plugin:$versions.intellij",
-                detektPlugin  : "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:$versions.detekt"
+                androidPlugin : "com.android.tools.build:gradle:4.2.1",
+                kotlinPlugin  : "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10",
+                intellijPlugin: "org.jetbrains.intellij.plugins:gradle-intellij-plugin:0.6.5",
+                detektPlugin  : "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.17.1",
+                releasesHub   : "com.dipien:releases-hub-gradle-plugin:2.0.2",
         ],
         android: [
-                appcompat                   : "androidx.appcompat:appcompat:$versions.appcompat",
-                lifecycleViewmodel          : "androidx.lifecycle:lifecycle-viewmodel:$versions.lifecycleVersion",
-                lifecycleViewModelSavedState: "androidx.lifecycle:lifecycle-viewmodel-savedstate:$versions.lifecycleVersion",
-                material                    : "com.google.android.material:material:$versions.material",
-                appStartup                  : "androidx.startup:startup-runtime:$versions.appStartup",
+                appcompat                   : "androidx.appcompat:appcompat:1.2.0",
+                lifecycleViewmodel          : "androidx.lifecycle:lifecycle-viewmodel:2.3.1",
+                lifecycleViewModelSavedState: "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1",
+                material                    : "com.google.android.material:material:1.3.0",
+                appStartup                  : "androidx.startup:startup-runtime:1.0.0",
         ],
         rx     : [
-                rxJava2      : "io.reactivex.rxjava2:rxjava:$versions.rxJava2",
-                rxJava3      : "io.reactivex.rxjava3:rxjava:$versions.rxJava3",
-                rxJava3Bridge: "com.github.akarnokd:rxjava3-bridge:$versions.rxJava3Bridge",
-                rxAndroid    : "io.reactivex.rxjava3:rxandroid:$versions.rxAndroid",
+                rxJava2      : "io.reactivex.rxjava2:rxjava:2.2.21",
+                rxJava3      : "io.reactivex.rxjava3:rxjava:3.0.13",
+                rxJava3Bridge: "com.github.akarnokd:rxjava3-bridge:3.0.0",
+                rxAndroid    : "io.reactivex.rxjava3:rxandroid:3.0.0",
         ],
         test   : [
-                jUnit5           : "org.junit.jupiter:junit-jupiter:$versions.jUnit5",
-                kotestJunitRunner: "io.kotest:kotest-runner-junit5-jvm:$versions.kotest",
-                kotestAssertions : "io.kotest:kotest-assertions-core:$versions.kotest",
-                kotestProperty   : "io.kotest:kotest-property:$versions.kotest",
+                jUnit5           : "org.junit.jupiter:junit-jupiter:5.7.2",
+                kotestJunitRunner: "io.kotest:kotest-runner-junit5-jvm:4.6.0",
+                kotestAssertions : "io.kotest:kotest-assertions-core:4.6.0",
+                kotestProperty   : "io.kotest:kotest-property:4.6.0",
         ],
         plugin : [
-                freemarker: "org.freemarker:freemarker:$versions.freemarker",
+                freemarker: "org.freemarker:freemarker:2.3.31",
         ]
 ]
