--- a/gradle.properties
+++ b/gradle.properties
@@ -43,4 +43,5 @@ android.defaults.buildfeatures.shaders=false
 # ----- Config -----
 #
 libraryVersion=1.1.2
+pluginVersion=1.0.1
 libraryGroup=vivid.money.elmslie
