--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,30 +4,32 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Release version'
+        description: 'Library release version'
         required: true
+      plugin_version:
+        description: 'Plugin release version'
+        required: false
+        default: "none"
 
 env:
   NEW_VERSION: ${{ github.event.inputs.version }}
+  NEW_PLUGIN_VERSION: ${{ github.event.inputs.plugin_version }}
 
 jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
       - name: Ensure main branch
         run: ./.github/sh/validate_main_branch.sh
 
-      - name: Validate token format
-        run: ./.github/sh/validate_github_token_format.sh "${{ secrets.GITHUB_TOKEN }}"
+      - name: Validate library version update
+        run: ./.github/sh/validate_version_update.sh "libraryVersion" "$NEW_VERSION"
 
-      - name: Validate version
-        run: |
-          OLD_VERSION=$(./.github/sh/parse_library_version.sh)
-          ./.github/sh/validate_version_format.sh "$NEW_VERSION"
-          ./.github/sh/validate_version_increased.sh "$OLD_VERSION" "$NEW_VERSION"
+      - name: Validate plugin version update
+        if: github.event.inputs.plugin_version != 'none'
+        run: ./.github/sh/validate_version_update.sh "pluginVersion" "$NEW_PLUGIN_VERSION"
 
       - name: Validate jitpack publishing
         run: |
@@ -43,24 +45,27 @@ jobs:
     needs: validate
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - name: Update version property
-        run: ./.github/sh/update_version_property.sh "$NEW_VERSION"
+      - name: Update library version
+        run: ./.github/sh/update_release_version "libraryVersion" "$NEW_VERSION"
 
-      - name: Validate version updated
-        run: ./.github/sh/validate_has_git_changes.sh
-
-      - name: Commit and push
-        uses: stefanzweifel/git-auto-commit-action@v4
+      - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "Bump release version to ${{ env.NEW_VERSION }}"
+          commit_message: "Update library version to ${{ env.NEW_VERSION }}"
           file_pattern: gradle.properties
           skip_dirty_check: true
 
-      - name: Build plugin jar
-        run: ./gradlew :elmslie-plugin:buildPlugin
+      - name: Update plugin version
+        if: github.event.inputs.plugin_version != 'none'
+        run: ./.github/sh/update_release_version "pluginVersion" "$NEW_PLUGIN_VERSION"
+
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        if: github.event.inputs.plugin_version != 'none'
+        with:
+          commit_message: "Update plugin version to ${{ env.NEW_PLUGIN_VERSION }}"
+          file_pattern: gradle.properties
+          skip_dirty_check: true
 
       - name: Build Changelog
         id: github_release
@@ -69,8 +74,9 @@ jobs:
           toTag: HEAD
           failOnError: true
           configuration: .github/changelogconfig/configuration.json
-          owner: vivid-money
+          owner: diklimchuk
           repo: elmslie
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Release
         uses: ncipollo/release-action@v1
