Update agp version to 7.0.0

--- a/gradle/android-publishing.gradle
+++ b/gradle/android-publishing.gradle
@@ -12,7 +12,7 @@ task javadocs(type: Javadoc) {
     failOnError false
     source = android.sourceSets.main.java.sourceFiles
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-    classpath += configurations.compile
+    classpath += configurations.implementation
 }
 
 task javadocsJar(type: Jar, dependsOn: javadocs) {
