--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -10,6 +10,7 @@ ext.deps = [
                 intellijPlugin: "org.jetbrains.intellij.plugins:gradle-intellij-plugin:1.1.4",
                 detektPlugin  : "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.17.1",
                 releasesHub   : "com.dipien:releases-hub-gradle-plugin:2.0.2",
+                dokka         : "org.jetbrains.dokka:dokka-gradle-plugin:1.5.0",
         ],
         android: [
                 appcompat                   : "androidx.appcompat:appcompat:1.3.1",
