Remove specifying kotlin version for compose

--- a/elmslie-samples/compose-paging/build.gradle
+++ b/elmslie-samples/compose-paging/build.gradle
@@ -4,14 +4,8 @@ plugins {
 }
 
 android {
-    buildFeatures {
-        buildConfig = true
-        compose = true
-    }
-    composeOptions {
-        kotlinCompilerVersion = versions.kotlin
-        kotlinCompilerExtensionVersion = versions.compose
-    }
+    buildFeatures.compose = true
+    composeOptions.kotlinCompilerExtensionVersion = versions.compose
 }
 
 dependencies {
