Upgraded org.jetbrains.kotlin:kotlin-gradle-plugin from 1.5.21 to 1.5.31

--- a/build.gradle
+++ b/build.gradle
@@ -32,4 +32,10 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions {
+        jvmTarget = "11"
+    }
+}
+
 apply from: 'gradle/release-hub.gradle'
