Enable lint in pure kotlin modules

--- a/elmslie-rxjava-2/build.gradle
+++ b/elmslie-rxjava-2/build.gradle
@@ -11,4 +11,5 @@ dependencies {
 
 apply from: "../gradle/junit-5.gradle"
 apply from: "../gradle/kotlin-publishing.gradle"
+apply from: "../gradle/android-lint.gradle"
 apply from: "../gradle/detekt.gradle"
