--- a/elmslie-test/build.gradle
+++ b/elmslie-test/build.gradle
@@ -7,4 +7,5 @@ dependencies {
     implementation(deps.rx.rxJava3)
 }
 
+apply from: "../gradle/android-lint.gradle"
 apply from: "../gradle/detekt.gradle"
