--- a/elmslie-core/build.gradle
+++ b/elmslie-core/build.gradle
@@ -14,3 +14,4 @@ dependencies {
 apply from: "../gradle/junit-5.gradle"
 apply from: "../gradle/kotlin-publishing.gradle"
 apply from: "../gradle/detekt.gradle"
+apply from: "../gradle/android-lint.gradle"
