--- a/elmslie-samples/android-loader/build.gradle
+++ b/elmslie-samples/android-loader/build.gradle
@@ -22,3 +22,4 @@ dependencies {
 apply from: "../../gradle/junit-5.gradle"
 apply from: "../../gradle/android-library.gradle"
 apply from: "../../gradle/detekt.gradle"
+apply from: "../../gradle/android-lint.gradle"
