--- a/elmslie-samples/compose-paging/build.gradle
+++ b/elmslie-samples/compose-paging/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
 apply from: "../../gradle/junit-5.gradle"
 apply from: "../../gradle/android-library.gradle"
+apply from: "../../gradle/android-lint.gradle"
 apply from: "../../gradle/detekt.gradle"
 
 android.defaultConfig.minSdkVersion 21
