--- a/elmslie-store-persisting/build.gradle
+++ b/elmslie-store-persisting/build.gradle
@@ -14,3 +14,4 @@ dependencies {
 apply from: "../gradle/junit-5.gradle"
 apply from: "../gradle/android-library.gradle"
 apply from: "../gradle/android-publishing.gradle"
+apply from: "../gradle/android-lint.gradle"
