Upgraded org.jetbrains.intellij.plugins:gradle-intellij-plugin from 1.1.4 to 1.2.0

--- a/elmslie-plugin/build.gradle
+++ b/elmslie-plugin/build.gradle
@@ -18,7 +18,7 @@ intellij {
 
 }
 // runIde.ideDir = layout.projectDirectory.dir('C://Program Files/Android/Android Studio') // for Windows
-runIde.ideDir = layout.projectDirectory.dir('/Applications/Android Studio.app') // for MacOS
+runIde.ideDir = layout.projectDirectory.dir('/Applications/Android Studio.app').getAsFile() // for MacOS
 
 patchPluginXml {
     changeNotes = """
