--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -14,6 +14,7 @@ ext.deps = [
         android: [
                 appcompat                   : "androidx.appcompat:appcompat:1.3.1",
                 appStartup                  : "androidx.startup:startup-runtime:1.1.0",
+                lifecycle                   : "androidx.lifecycle:lifecycle-common:2.4.0",
                 lifecycleViewmodel          : "androidx.lifecycle:lifecycle-viewmodel:2.4.0",
                 lifecycleViewModelSavedState: "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.4.0",
                 material                    : "com.google.android.material:material:1.4.0",
