--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include ':elmslie-compose'
 include ':elmslie-core'
 include ':elmslie-coroutines'
 include ':elmslie-rxjava-2'
+include ':elmslie-rxjava-3'
 include ':elmslie-plugin'
 include ':elmslie-store-persisting'
 include ':elmslie-test'
