--- a/elmslie-samples/coroutines-loader/src/main/AndroidManifest.xml
+++ b/elmslie-samples/coroutines-loader/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:supportsRtl">
 
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
