--- a/elmslie-samples/kotlin-calculator/build.gradle
+++ b/elmslie-samples/kotlin-calculator/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation(deps.rx.rxJava3)
 
     testImplementation(project(":elmslie-test"))
+    testImplementation(project(":elmslie-test-rxjava-3"))
 }
 
 apply from: "../../gradle/junit-5.gradle"
