--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include ':elmslie-rxjava-3'
 include ':elmslie-plugin'
 include ':elmslie-store-persisting'
 include ':elmslie-test'
+include ':elmslie-test-rxjava-3'
 
 include ':sample-android-loader'
 project(":sample-android-loader").projectDir = file("elmslie-samples/android-loader")
